<resources>
    <string name="app_name">Recipe Pot</string>
    <string name="save">SAVE</string>
    <string name="notes">notes</string>
    <string name="add_any_notes_or_tips">add any notes or tips</string>
    <string name="enter_link_to_recipe">enter link to recipe</string>
    <string name="enter_recipe_name">enter recipe name</string>
    <string name="recipe_name">recipe name</string>
    <string name="link">link</string>
    <string name="notesTV">notes</string>
    <string name="delete">DELETE</string>
    <string name="menu_toast_deleted">recipe deleted</string>
    <string name="view_recipes">view recipes</string>
    <string name="add_recipe">add recipe</string>
    <string name="menu_toast_added">recipe added to the pot</string>
    <string name="update">update</string>
    <string name="menu_toast_updated">recipe notes updated</string>
</resources>
